# ambar

./: Cargo.toml  run.sh
examples/: infer.rs
src/: ambar.rs  burn_backend.rs  draw.rs  lib.rs  ncnn.rs  types.rs
